Carry the campaign's cdisc-library and web-api fixes to the OSS twins
The web-api twin was a whole fix pass behind before any of this: its last port
corresponded to the commit before the 13-finding pass, so it still had
readBodySafe duplicated in JsonApiClient. It now carries that pass, the
streaming cache read and the byte[] cache currency -- 24 merges and 6 new tests.

cdisc-library takes the path-segment encoding, the blank-API-key guards, the
qrs instruments key, ordinal as a String on all twelve DTOs and the integrated
group accessor. Four of the ten needed patching around pre-existing test lag in
the twin rather than copying: it has no PROBE fixture machinery and a leaner
ModelInterfaceTest, and that drift is left alone.

Nothing was ported to cumba-oss-help: the CachingInputStream fixes live in a
stream package the OSS variant does not have.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01EBHAWjpYhUtXs9zUoVciiL